GameController cleaned from warnings (again).